--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/themes": "^2.0.3",
     "@react-email/components": "^0.0.12",
     "@react-email/tailwind": "^0.0.13",
+    "million": "^2.6.4",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
