--- a/package.json
+++ b/package.json
@@ -16,20 +16,38 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.3",
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/themes": "^2.0.3",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "^0.0.12",
     "@react-email/tailwind": "^0.0.13",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "embla-carousel-react": "8.0.0-rc17",
     "million": "^2.6.4",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
-    "resend": "^2.1.0"
+    "resend": "^2.1.0",
+    "sonner": "^1.3.1",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.8.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
