--- a/package.json
+++ b/package.json
@@ -1,16 +1,38 @@
 {
-  "name": "naparajith",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^5.0.0-beta.8",
-    "@astrojs/check": "^0.9.4",
-    "typescript": "^5.6.3"
-  }
+	"name": "naparajith",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro check && astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"format": "prettier . --write",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/react": "^3.6.2",
+		"@astrojs/sitemap": "^3.2.1",
+		"@astrojs/tailwind": "^5.1.2",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"astro": "^5.0.0-beta.8",
+		"leetcode-query": "^1.2.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^19.5.0",
+		"@commitlint/config-conventional": "^19.5.0",
+		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/typography": "^0.5.15",
+		"fluid-tailwind": "^1.0.4",
+		"husky": "^9.1.6",
+		"prettier": "^3.3.3",
+		"prettier-plugin-astro": "^0.14.1",
+		"prettier-plugin-tailwindcss": "^0.6.8"
+	}
 }
