--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^5.1.2",
-		"astro": "^5.0.0-beta.8",
+		"@astrojs/vercel": "^7.8.2",
+		"astro": "^4.16.13",
 		"leetcode-query": "^1.2.3",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3"
