--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@astrojs/vercel": "^7.8.2",
 		"astro": "^4.16.13",
 		"leetcode-query": "^1.2.3",
+		"sharp": "^0.33.5",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3"
 	},
