--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^5.1.2",
 		"@astrojs/vercel": "^7.8.2",
+		"@vercel/speed-insights": "^1.1.0",
 		"astro": "^4.16.13",
 		"leetcode-query": "^1.2.3",
 		"sharp": "^0.33.5",
