--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^5.1.2",
 		"@astrojs/vercel": "^7.8.2",
-		"@fontsource/geist-mono": "^5.1.0",
 		"@vercel/speed-insights": "^1.1.0",
 		"astro": "^4.16.13",
 		"leetcode-query": "^1.2.3",
+		"mdast-util-to-string": "^4.0.0",
+		"reading-time": "^1.5.0",
 		"sharp": "^0.33.5",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3"
