feat: new CLI command to check system information

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"dev": "astro dev",
 		"build": "astro check && astro build",
 		"preview": "astro preview",
+		"info": "astro info",
 		"astro": "astro",
 		"format": "prettier . --write",
 		"prepare": "husky"
