--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^5.1.2",
-		"@astrojs/vercel": "^7.8.2",
-		"astro": "^4.16.13",
+		"@astrojs/vercel": "8.0.0-beta.4",
+		"astro": "5.0.0-beta.12",
 		"leetcode-query": "^1.2.3",
 		"mdast-util-to-string": "^4.0.0",
 		"reading-time": "^1.5.0",
