chore: ignore formatting

--- a/.prettierignore
+++ b/.prettierignore
@@ -22,7 +22,7 @@ Contact me through electronic mail: <naparajith@duck.com>
 .vercel
 
 <!-- Policy Page -->
-src/content/policy/js-policy.mdx
+src/content/policy/
 
 <!-- Blog Page -->
 src/content/blog/the-unfortunate-overhyping-of-ai.mdx
