chore: ignore formatting

--- a/.prettierignore
+++ b/.prettierignore
@@ -24,5 +24,8 @@ Contact me through electronic mail: <naparajith@duck.com>
 <!-- Policy Page -->
 src/content/policy/
 
+<!-- License Page -->
+src/content/license/
+
 <!-- Blog Page -->
 src/content/blog/the-unfortunate-overhyping-of-ai.mdx
