--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-	"name": "naparajith",
-	"type": "module",
-	"version": "0.0.1",
-	"license": "AGPL-3.0-only",
-	"scripts": {
-		"dev": "astro dev",
-		"build": "astro check && astro build",
-		"preview": "astro preview",
-		"info": "astro info",
-		"astro": "astro",
-		"format": "prettier . --write",
-		"prepare": "husky"
-	},
-	"dependencies": {
-		"@astrojs/check": "^0.9.4",
-		"@astrojs/mdx": "^4.2.1",
-		"@astrojs/sitemap": "^3.2.1",
-		"@astrojs/tailwind": "^6.0.0",
-		"@astrojs/vercel": "8.1.2",
-		"astro": "5.5.2",
-		"leetcode-query": "^1.2.3",
-		"mdast-util-to-string": "^4.0.0",
-		"reading-time": "^1.5.0",
-		"sharp": "^0.33.5",
-		"tailwindcss": "^3.4.15",
-		"typescript": "^5.7.2"
-	},
-	"devDependencies": {
-		"@commitlint/cli": "^19.6.0",
-		"@commitlint/config-conventional": "^19.6.0",
-		"@tailwindcss/typography": "^0.5.15",
-		"fluid-tailwind": "^1.0.4",
-		"husky": "^9.1.7",
-		"prettier": "^3.4.0",
-		"prettier-plugin-astro": "^0.14.1",
-		"prettier-plugin-tailwindcss": "^0.6.9"
-	}
+  "name": "naparajith",
+  "type": "module",
+  "version": "0.0.1",
+  "license": "AGPL-3.0-only",
+  "scripts": {
+    "dev": "astro dev --verbose",
+    "build": "astro check --verbose && astro build --verbose",
+    "preview": "astro preview",
+    "info": "astro info",
+    "astro": "astro",
+    "format": "prettier . --write",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.2.1",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/vercel": "8.1.2",
+    "astro": "5.5.2",
+    "leetcode-query": "^1.2.3",
+    "mdast-util-to-string": "^4.0.0",
+    "reading-time": "^1.5.0",
+    "sharp": "^0.33.5",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "fluid-tailwind": "^1.0.4",
+    "husky": "^9.1.7",
+    "prettier": "^3.4.0",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.9"
+  }
 }
