chore: .prettierignore comments

--- a/.prettierignore
+++ b/.prettierignore
@@ -27,6 +27,7 @@ src/content/policy/
 <!-- License Page -->
 src/content/license/
 
+<!-- Profile Page -->
 src/content/profile/
 
 <!-- Blog Page -->
