--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
 		"prettier": "^3.5.3",
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-tailwindcss": "^0.6.11"
-	}
+	},
+	"packageManager": "pnpm@10.10.0"
 }
