refactor: changed 2 policy pages to use MD instead of MDX

--- a/.prettierignore
+++ b/.prettierignore
@@ -22,7 +22,7 @@ Contact me through electronic mail: <naparajith@duck.com>
 .vercel
 
 <!-- Policy Page -->
-src/content/policy/
+src/content/policy/js-policy.mdx
 
 <!-- License Page -->
 src/content/license/
