--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"version": "0.0.1",
 	"license": "AGPL-3.0-only",
 	"scripts": {
-		"dev": "astro dev --verbose",
-		"build": "astro check --verbose && astro build --verbose",
+		"dev": "astro dev",
+		"build": "astro check && astro build",
 		"preview": "astro preview",
 		"info": "astro info",
 		"astro": "astro",
@@ -14,26 +14,27 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
-		"@astrojs/mdx": "^4.2.1",
-		"@astrojs/sitemap": "^3.2.1",
-		"@astrojs/tailwind": "^6.0.0",
-		"@astrojs/vercel": "8.1.2",
-		"astro": "5.5.2",
-		"leetcode-query": "^1.2.3",
+		"@astrojs/mdx": "^4.2.6",
+		"@astrojs/sitemap": "^3.4.0",
+		"@astrojs/tailwind": "^6.0.2",
+		"@astrojs/vercel": "8.1.4",
+		"astro": "5.7.12",
+		"leetcode-query": "^2.0.0",
 		"mdast-util-to-string": "^4.0.0",
 		"reading-time": "^1.5.0",
-		"sharp": "^0.33.5",
+		"sharp": "^0.34.1",
 		"tailwindcss": "^3.4.15",
-		"typescript": "^5.7.2"
+		"typescript": "^5.8.3"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^19.6.0",
-		"@commitlint/config-conventional": "^19.6.0",
-		"@tailwindcss/typography": "^0.5.15",
+		"@commitlint/cli": "^19.8.1",
+		"@commitlint/config-conventional": "^19.8.1",
+		"@tailwindcss/typography": "^0.5.16",
 		"fluid-tailwind": "^1.0.4",
 		"husky": "^9.1.7",
-		"prettier": "^3.4.0",
+		"prettier": "^3.5.3",
 		"prettier-plugin-astro": "^0.14.1",
-		"prettier-plugin-tailwindcss": "^0.6.9"
-	}
+		"prettier-plugin-tailwindcss": "^0.6.11"
+	},
+	"packageManager": "pnpm@10.10.0"
 }
