--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/mdx": "^4.3.0",
+		"@astrojs/react": "^4.3.0",
 		"@astrojs/sitemap": "^3.4.1",
 		"@astrojs/tailwind": "^6.0.2",
 		"@astrojs/vercel": "8.2.1",
+		"@tailwindcss/forms": "^0.5.10",
+		"@types/react": "^19.1.9",
+		"@types/react-dom": "^19.1.7",
 		"astro": "5.11.0",
 		"leetcode-query": "^2.0.0",
 		"mdast-util-to-string": "^4.0.0",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
 		"reading-time": "^1.5.0",
-		"tailwindcss": "^3.4.15",
 		"sharp": "^0.34.2",
+		"tailwindcss": "^3.4.15",
 		"typescript": "^5.8.3"
 	},
 	"devDependencies": {
