--- a/package.json
+++ b/package.json
@@ -14,22 +14,22 @@
     },
     "dependencies": {
         "@astrojs/check": "^0.9.4",
-        "@astrojs/mdx": "^4.3.3",
+        "@astrojs/mdx": "^4.3.4",
         "@astrojs/react": "^4.3.0",
-        "@astrojs/sitemap": "^3.4.2",
+        "@astrojs/sitemap": "^3.5.0",
         "@astrojs/tailwind": "^6.0.2",
-        "@astrojs/vercel": "8.2.5",
+        "@astrojs/vercel": "^8.2.6",
         "@tailwindcss/forms": "^0.5.10",
-        "@types/react": "^19.1.9",
+        "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
-        "astro": "5.12.8",
+        "astro": "5.13.2",
         "leetcode-query": "^2.0.1",
         "mdast-util-to-string": "^4.0.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "reading-time": "^1.5.0",
-        "tailwindcss": "^3.4.15",
         "sharp": "^0.34.3",
+        "tailwindcss": "^3.4.17",
         "typescript": "^5.9.2"
     },
     "devDependencies": {
@@ -40,7 +40,7 @@
         "husky": "^9.1.7",
         "prettier": "^3.6.2",
         "prettier-plugin-astro": "^0.14.1",
-        "prettier-plugin-tailwindcss": "^0.6.13"
+        "prettier-plugin-tailwindcss": "^0.6.14"
     },
     "packageManager": "pnpm@10.10.0"
 }
