--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "homepage": "https://naparajith.in",
     "bugs": "https://github.com/DrInfinite/naparajith/issues",
     "scripts": {
-        "dev": "astro dev",
-        "build": "astro check && astro build",
-        "preview": "astro preview",
-        "info": "astro info",
         "astro": "astro",
+        "build": "astro check && astro build",
+        "clean": "rm -rf .astro && rm -rf .vercel && rm -rf dist",
+        "dev": "astro dev",
         "format": "prettier . --write",
-        "prepare": "husky"
+        "lint": "astro check",
+        "prepare": "husky",
+        "prebuild": "pnpm clean",
+        "preview": "astro preview"
     },
     "dependencies": {
         "@astrojs/check": "^0.9.4",
@@ -60,5 +62,5 @@
         "prettier-plugin-astro": "^0.14.1",
         "prettier-plugin-tailwindcss": "^0.6.14"
     },
-    "packageManager": "pnpm@10.10.0"
+    "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
